--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ I have a dormant 9/11 hyperfixation yes im serious. Sometimes i tweet a lot abou
     win.focus();
     }
   </script>
-  <button onclick="link('https://fruityskewers.cyberch1ck.repl.co/')"> Main Acc Website Here!</button>
+  <button onclick="link('https://cyberch1cks.github.io/fruityskewers/')"> Main Acc Website Here!</button>
 </body>
 
 </html>
