--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ function createDiv(height, width) {
 <h2>I am lucia who is also aurora who is also cyberch1ck on twitter dot com</h2>
 <h3>Welcome to my fun secret account for my Real Ones Only &#128293; &#128175;</h3>
 <p>
-  I tweet about my life and loona and genshin and tangled and dolls* and whatever else my brain latches onto <br>
+  I tweet about my life and ncis and genshin and tangled and mlp and dolls* and whatever else my brain latches onto <br>
 <br>
   <strong>Kaeya alberich is my oc </strong> On this account we will refer to him as my oc only &#128293; &#128175; <br>
   <br>
