--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ I have a dormant 9/11 hyperfixation yes im serious. Sometimes i tweet a lot abou
     win.focus();
     }
   </script>
-  <button onclick="link('https://cyberch1cks.github.io/fruityskewers/')"> Main Acc Website Here!</button>
+  <button onclick="link('https://cyberch1ck.straw.page/')"> Main Acc Website Here!</button>
 </body>
 
 </html>
